4.fisher_forecast/no_mnu_forecast/logs/2023-08-28-computeN_w0_3.2_no_mnu.err

CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.
To initialize your shell, run

    $ conda init <SHELL_NAME>

Currently supported shells are:
  - bash
  - fish
  - tcsh
  - xonsh
  - zsh
  - powershell

See 'conda init --help' for more information and options.

IMPORTANT: You may need to close and restart your shell after running 'conda init'.


  File "/home/users/delon/aemulusnu_massfunction/4.fisher_forecast/no_mnu_forecast/../compute_cluster_abundance_at_cosmology.py", line 63
    if(fiducial_cosmology['nu_mass_ev'] == 0.00)
                                                ^
SyntaxError: invalid syntax
